<resources>

    <string name="app_name">MyTurn</string>
    <string name="NombreUsuario">Nombre</string>
    <string name="Descriccion">Perfil</string>
    <string name="Actualizar">Actualizar</string>
    <string name="MisServicios">Mis Servicios</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Turno">Turnos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
